# python-easy-json

./: .gitignore  LICENSE  README.md  README.rst  pyproject.toml  requirements.in  requirements.txt  setup.py
.github/workflows/: coverage.yaml  run_unittests.yaml  tests.yaml  unittests.yaml
src/json_object/: __init__.py  json_object.py
src/python_easy_json/: json_object.py
tests/: base_test.py  performance_tests.py  test_bytes.py  test_data_export.py  test_json_with_dicts.py  test_json_with_enum.py  test_json_with_lists.py  test_nested_object_models.py  test_object_model.py  test_object_model_defaults.py  test_simple_json.py
tests/test_data/: nested_data_1.json  nested_data_2.json  nested_grouping.json  nested_lists.json  nested_path.json  simple.json  simple_array.json
