[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name="python-easy-json"
version="1.2.4"
python_requires=">=3.7"
license="MIT"
description="A simple, yet powerful, JSON/python dictionary to object deserialization"
authors = [
    { name = "Robert Abram", email = "rabram991@gmail.com" },
]
dependencies = [ "dateutils", ]
requires-python = ">= 3.9"
readme="README.rst"
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
keywords=[
    "serialization",
    "rest",
    "json",
    "api",
    "marshal",
    "marshalling",
    "deserialization",
    "schema",
    "model",
    "models",
    "data"
]

[project.urls]
Homepage = "https://github.com/robabram/python-easy-json"
Repository = "https://github.com/robabram/python-easy-json"
Changelog = "https://github.com/robabram/python-easy-json"
Issues = "https://github.com/robabram/python-easy-json/issues"
